<resources>
    <string name="app_name">MyMovies</string>
    <string name="title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="insert">Insert</string>
    <string name="showList">Show List</string>
    <string name="pg13">Show all PG-13 movies</string>
    <string name="ID">Movie ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="etGenre">Enter genre here</string>
    <string name="etTitle">Enter movie title here</string>
    <string name="etRelease">Enter year of release here</string>
    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>